[package]
name = "anonynews_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.9", features = ["full"]}
futures = { version = "0.3" }
bytes = "1"
anyhow = "1.0"
rml_rtmp = "0.6.1"
ffmpeg-next = "5.0.2"
libc = "0.2"
arrayvec = "0.7.2"
